--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@taquito/signer": "^15.1.0",
     "@taquito/taquito": "^15.1.0",
     "@taquito/utils": "^15.1.0",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
