--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.12",
+    "@nestjs/platform-ws": "^9.4.0",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.3.12",
     "@taquito/signer": "^15.1.0",
     "@taquito/taquito": "^15.1.0",
     "@taquito/utils": "^15.1.0",
     "@types/axios": "^0.14.0",
+    "@types/ws": "^8.5.4",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
@@ -42,7 +44,8 @@
     "rxjs": "^7.2.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
